examples/flask-react-app/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flask-react-app
  labels:
    name: flask-react-app
    environment: production
